[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/block.png" type="Texture" id=1]
[ext_resource path="res://Towers/Platform.gd" type="Script" id=2]
[ext_resource path="res://src/sound/build.wav" type="AudioStream" id=3]
[ext_resource path="res://src/sound/cancel_build.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Platform" type="Node2D"]
script = ExtResource( 2 )

[node name="area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="area"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="cancel_build" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="build_success" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.85
bus = "Sound"

[connection signal="finished" from="build_success" to="." method="_on_build_success_finished"]
